20180307
--------
- Fixed #36282 - The OData 4 Service cannot access VDP databases and views with non-ASCII characters in their names

20170912
--------
- Fixed #33635 - Possible Olingo issue with complex types generated by means of NEST

20170821
--------
- Added #33444 - Debug support

20170620
--------
-Fixed #32942 - The odata.serviceRoot property does not affect "@odata.context" for the Service Document

20170518
--------
-Added #32414 - Create scripts to manage the odata4 service as Windows service
-Fixed #32391 - Password issue in OData
20170404
--------
- Fixed #29848 - Use Date/Timestamp literals instead of String
- Added #29840 - Adding support for the MIME type application/json;odata.metadata=full
- Added #31695 - Review semantics of $top and $skip and how they are used for pagination

20170307
--------
- Fixed #31232 - Error adding a key to project in a SELECT_NAVIGATIONAL sentence
- Fixed #31233 - Error using $expand=*
- Fixed #31264 - Avoid queries inside a rowMap method (e.g. DESC COMMANDS)
- Fixed #31500 - The "server.pageSize" parameter is acting as an upper limit when it is used the "odata.maxpagesize" preference in the HTTP "Prefer" header.

20161102
--------
- Fixed #29309 - Strange authentication behaviour
- Fixed #29553 - OData4 Service is adding "Precision" attribute to metadata for "Date", which is contrary to spec

20160902
--------
- Fixed #28748 - Exception using a logical condition with null inside parentheses in a $filter expression-
- Fixed #28792 - Modify documentation about "Deploying into the Denodo embedded web container" for denodo 5.5
- Fixed #28600 - Select only required fields from a Expanded Entity using OData Service
- Fixed #28507 - Change web.xml to give a default version without CORS configuration
- Fixed #28595 - 'eq' and 'ne' functions are not working when the variable name contains 'eq' or 'ne' respectively

20160729
--------
- Added #27723 - Add CORS Support to OData Service